<resources>
    <string name="app_name">MutuAlert</string>
    <string name="phone">Teléfono</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="create_account">Crear Cuenta</string>
    <string name="forgot_password">Olvidastes tu contraseña?</string>
    <string name="verify_your_number">Verifica tu teléfono</string>
    <string name="verify_your_number_content">Se le enviará un codigo por SMS</string>
    <string name="phone_code">+51</string>
    <string name="continue_str">Continuar</string>
    <string name="enter_code_here">Ingresa el código aquí</string>
    <string name="verify_your_code_content">Le hemos enviado un código de acceso por SMS para la verificación del número de teléfono móvil</string>
    <string name="resend_code">Reenviar Código</string>
    <string name="last_name">Apellido Paterno</string>
    <string name="last_name_2">Apellido Materno</string>
    <string name="names">Nombres</string>
    <string name="new_password">Nueva Contraseña</string>
    <string name="register">Registrarse</string>
    <string name="confirm">Confirmar</string>
    <string name="already_member">¿Ya eres miembro? Iniciar Sesión</string>
    <string name="dashboard">Dashboard</string>
    <string name="contacts">Contactos</string>
    <string name="phone_exist">El teléfono ya está registrado, intente recuperar la contraseña</string>
    <string name="phone_not_exist">El teléfono no se encuentra registrado</string>
    <string name="error_network">Error de red. Vuelve a intentarlo más tarde</string>
    <string name="error_response">Algo fue mal con los datos enviados</string>
    <string name="logout">Cerrar Sesion</string>
    <string name="code_incorrect">Código ingresado es incorrecto</string>
    <string name="edit_contact">Editar Contacto</string>
    <string name="delete_contact">Eliminar Contacto</string>
    <string name="success_create_contact">El contacto se ha guardado</string>
    <string name="success_update_contact">El contacto se ha modificado</string>
    <string name="success_delete_contact">El contacto se ha eliminado</string>
    <string name="cancel">Cancelar</string>
    <string name="contact_delete_title">¿Quieres borrar el contacto?</string>
    <string name="contact_delete_message">Se eliminará a \"$CONTACT$\" de tus contactos</string>
    <string name="alias">Alias</string>
    <string name="save">Guardar</string>
    <string name="form_invalid">Revise los campos llenados</string>
    <string name="permission_location">Esta aplicación necesita saber tu ubicación</string>
    <string name="ok">Ok</string>
    <string name="deny">Denegar</string>
    <string name="emergency_notification_title">¡Emergencia Activada!</string>
    <string name="emergency_notification_message">Notificando constantemente su ubicación</string>
    <string name="emergency_slide">¡EMERGENCIA!</string>
    <string name="emergency_dialog_title">¿Quieres solicitar ayuda?</string>
    <string name="emergency_dialog_message">Notificaremos a sus contactos y a las personas cercanas</string>
    <string name="emergency_dialog_confirm">Sí, ayudenme</string>
    <string name="emergency_dialog_cancel">No</string>
    <string name="emergency_stop_success">Emergencia finalizada</string>
    <string name="refresh">Actualizar</string>
    <string name="channel_name_alert">Notificación cuando pido ayuda</string>
    <string name="channel_name_emergency_mycontact">Notificación cuando mi contacto pide ayuda</string>
    <string name="channel_name_emergency_selfcontact">Notificación de ayuda cuando yo soy el contacto</string>
    <string name="channel_name_emergency_default">Notificación de un desconocido pidiendo ayuda</string>
    <string name="notify_title_emergency_mycontact">Ayuda a tu contacto</string>
    <string name="notify_title_emergency_selfcontact">Ayuda a tu amigo</string>
    <string name="notify_title_emergency_default">Ayuda a un usuario</string>
    <string name="notify_message_emergency_mycontact">Tu contacto \"$NAME$\" necesita ayuda</string>
    <string name="notify_message_emergency_selfcontact">\"$NAME$\" te tiene de contacto y necesita ayuda</string>
    <string name="notify_message_emergency_default">\"$NAME$\" necesita ayuda</string>
    <string name="marker_emergency_snippet">más información</string>
</resources>