<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/customAlertTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingVertical="@dimen/space_16">

        <ImageView
            android:id="@+id/ImageViewIcon"
            android:layout_width="@dimen/space_52"
            android:layout_height="@dimen/space_52"
            android:layout_gravity="center"
            android:contentDescription="No Image"
            app:tint="@color/white"
            app:srcCompat="@drawable/ic_baseline_person_gray_24" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="@dimen/space_16"
        android:paddingHorizontal="@dimen/space_16">

        <TextView
            android:id="@+id/textViewAlias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alias"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/editTextAlias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/alias"
            android:inputType="textPersonName"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/textViewtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_12"
            android:text="@string/phone"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"/>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="number"
            android:maxLength="9"
            android:textAlignment="viewStart" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/space_16"
        android:paddingHorizontal="@dimen/space_16">

        <Button
            android:id="@+id/ButtonPositive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/font_body_size" />

    </LinearLayout>

</LinearLayout>