<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterPhoneFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/verification_phone"/>

            <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/verify_your_number"
                android:textColor="@color/md_grey_600"
                android:textSize="@dimen/font_title_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textViewPhoneContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/roboto"
                android:text="@string/verify_your_number_content"
                android:textAlignment="center"
                android:textColor="@color/md_grey_600"
                android:textSize="@dimen/font_body_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPhone" />

            <EditText
                android:id="@+id/editTextCountry"
                android:layout_width="63dp"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/edittext_line_border"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/phone_code"
                android:inputType="textPersonName|phone"
                android:textAlignment="center"
                android:textColor="@color/md_grey_600"
                android:textSize="@dimen/font_title_size"
                android:focusable="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPhoneContent" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edittext_line_border"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="987654321"
                android:inputType="number"
                android:maxLength="9"
                android:paddingStart="8dp"
                android:textAlignment="viewStart"
                android:textColor="@color/md_grey_600"
                android:textSize="@dimen/font_title_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editTextCountry"
                app:layout_constraintTop_toBottomOf="@+id/textViewPhoneContent" />

            <Button
                android:id="@+id/buttonContinue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/button_dialog_primary_background"
                android:fontFamily="@font/roboto"
                android:textAllCaps="false"
                android:text="@string/continue_str"
                android:textSize="@dimen/font_body_size"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>