<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterCodeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/viewHeader"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/viewHeader"
                app:srcCompat="@drawable/verification_code" />

            <TextView
                android:id="@+id/textViewCodeContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/roboto"
                android:text="@string/verify_your_code_content"
                android:textAlignment="center"
                android:textColor="@color/md_grey_600"
                android:textSize="@dimen/font_body_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textViewEnterCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/roboto"
                android:text="@string/enter_code_here"
                android:textAlignment="center"
                android:textColor="@color/md_grey_400"
                android:textSize="@dimen/font_body_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCodeContent" />

            <EditText
                android:id="@+id/editTextCode"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edittext_line_border"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="123456"
                android:inputType="number"
                android:maxLength="6"
                android:textAlignment="center"
                android:textColor="@color/md_grey_600"
                android:textSize="@dimen/font_title_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewEnterCode" />

            <Button
                android:id="@+id/buttonContinue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/button_dialog_primary_background"
                android:fontFamily="@font/roboto"
                android:textAllCaps="false"
                android:text="@string/continue_str"
                android:textSize="@dimen/font_body_size"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextCode" />

            <Button
                android:id="@+id/buttonResendCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/button_round_white_background"
                android:fontFamily="@font/roboto"
                android:textAllCaps="false"
                android:text="@string/resend_code"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_body_size"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonContinue" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>