<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_100"
    tools:context=".ui.auth.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo_mutualert" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/white_background"
                    app:cardCornerRadius="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayoutPhone"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="32dp"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="@font/roboto"
                            android:textAlignment="viewStart"
                            android:textAllCaps="true"
                            android:textColor="@color/md_grey_500"
                            android:textSize="@dimen/font_body_size"
                            app:boxBackgroundColor="@color/md_grey_100"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextPhone"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:ems="10"
                                android:fontFamily="@font/roboto"
                                android:hint="@string/phone"
                                android:inputType="number"
                                android:textAlignment="viewStart"
                                android:textColor="@color/md_grey_600"
                                android:textColorHint="@color/md_grey_400"
                                android:textSize="@dimen/font_body_size" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayoutPassword"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="40dp"
                            android:fontFamily="@font/roboto"
                            android:textAlignment="viewStart"
                            android:textAllCaps="true"
                            android:textColor="@color/md_grey_500"
                            android:textSize="@dimen/font_body_size"
                            app:boxBackgroundColor="@color/md_grey_100"
                            app:passwordToggleEnabled="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPhone">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextPassword"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:ems="10"
                                android:fontFamily="@font/roboto"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:textAlignment="viewStart"
                                android:textColor="@color/md_grey_600"
                                android:textColorHint="@color/md_grey_400"
                                android:textSize="@dimen/font_body_size" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textSize="@dimen/font_title_size"
                    android:theme="@style/PSButton.LightGreenA100"
                    app:backgroundTint="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView" />

                <View
                    android:id="@+id/view"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/buttonCreateAccount"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

                <Button
                    android:id="@+id/buttonCreateAccount"
                    style="@style/PSButton.Default.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/create_account"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textSize="@dimen/font_body_size"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/buttonForgotPassword"
                    style="@style/PSButton.Default.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/forgot_password"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textSize="@dimen/font_body_size"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>